--- a/site-me-desapego/doacoes.html
+++ b/site-me-desapego/doacoes.html
@@ -28,15 +28,15 @@
     <section class="produtos-box">
         <div class="interface">
             <h2 class="titulo produtos-box-titulo">Sobre doações</h2>
-            <div class="flex">
+            <div class="flex flex-doacoes">
                 <p>Se você tem livros em bom estado, dos mais variados gêneros e para diferentes faixas etárias e gostaria de estar passado para frente,
                 clique no link abaixo e saiba como doar.</p>
-                <a href="https://www.instagram.com/me.desapego/" class="botao"><button>Entre em contato</button></a>
+                <a href="https://www.instagram.com/me.desapego/" class="botao botao-faq"><button>Entre em contato</button></a>
             </div>    
         </div>    
     </section>
 
-    <footer class="footer-container">
+    <footer class="footer-container footer-container-faq">
         <div class="interface footer-items">
             <div class="footer-logo">
                 <img src="imgs/logo.png" alt="logo Desapego.Me" width="150" height="119">
