--- a/site-me-desapego/index.html
+++ b/site-me-desapego/index.html
@@ -49,22 +49,25 @@
             <h1 class="titulo">Produtos em Destaque</h1>
             <div class="flex">
                 <div class="produto">
-                    <div class="produto-foto"></div>
-                    <!-- <img scr="./imgs/papo.png" alt="livro"> -->
+                    <div class="produto-foto">
+                        <img src="./imgs/minitura-capa-livro-starwars.jpg" class="miniatura" alt="livro">
+                    </div>
                     <strong>Star Wars : Herdeiro do Jedi</strong>
                     <p>R$40,00<p>
                     <a href="star-wars.html" class="botao"><button>Adquira já</button></a>
                 </div>
                 <div class="produto">
-                    <div class="produto-foto"></div>
-                    <!-- <img scr="" alt="livro"> -->
+                    <div class="produto-foto">
+                        <img src="./imgs/mil-coisas-podem-acontecer.jpg" class="miniatura" alt="livro">
+                    </div>
                     <strong>Mil coisas podem acontecer</strong>
                     <p>R$24,00<p>
                     <a href="mil-coisas-podem-acontecer.html" class="botao"><button>Adquira já</button></a>
                 </div>
                 <div class="produto">
-                    <div class="produto-foto"></div>
-                    <!-- <img scr="" alt="livro"> -->
+                    <div class="produto-foto">
+                        <img src="./imgs/robo-selvagem-capa,.jpg" class="miniatura" alt="livro">
+                    </div>
                     <strong>Robo Selvagem</strong>
                     <p>R$24,00<p>
                     <a href="robo-selvagem.html" class="botao"><button>Adquira já</button></a>
@@ -78,22 +81,25 @@
             <h2 class="titulo produtos-box-titulo">Produtos novos</h2>
             <div class="flex">
                 <div class="produto">
-                    <div class="produto-foto"></div>
-                    <!-- <img scr="" alt="livro"> -->
+                    <div class="produto-foto">
+                        <img src="./imgs/the-promised-neverland-capa.jpg" class="miniatura" alt="livro">
+                    </div>
                     <strong>The Promised Neverland Vol. 15</strong>
                     <p>R$22,00<p>
                     <a href="the-promised-neverland-vol-15.html" class="botao"><button>Adquira já</button></a>
                 </div>
                 <div class="produto">
-                    <div class="produto-foto"></div>
-                    <!-- <img scr="" alt="livro"> -->
+                    <div class="produto-foto">
+                        <img src="./imgs/eden-capa.jpg" class="miniatura" alt="livro">
+                    </div>
                     <strong>Eden - Its An Endless World! Vol. 2</strong>
                     <p>R$22,00<p>
                     <a href="eden-its-an-endless-world-vol-2.html" class="botao"><button>Adquira já</button></a>
                 </div>
                 <div class="produto">
-                    <div class="produto-foto"></div>
-                    <!-- <img scr="" alt="livro"> -->
+                    <div class="produto-foto">
+                        <img src="./imgs/9788583622703rezero12.jpg" class="miniatura" alt="livro">
+                    </div>
                     <strong>Re:Zero - Começando Uma Vida <br> Em Outro Mundo Vol. 12</strong>
                     <p>R$22,00<p>
                     <a href="re-zero-comecando-uma-nova-vida-em-outro-mundo-vol-12.html" class="botao"><button>Adquira já</button></a>
