--- a/site-me-desapego/doacoes.html
+++ b/site-me-desapego/doacoes.html
@@ -48,7 +48,7 @@
                 <h2>Fale conosco</h2>
                 <div class="footer-whatsapp">
                     <img src="imgs/whatsapp-icon.png" alt="icone do Whatsapp" width="20" height="20">
-                    <p>11 99999-9999 São Paulo<br> De segunda a sexta, das 08h ás 18h40<br> sábado das 09h às 17h20</p>
+                    <p>(11) 96761-6387 São Paulo<br> De segunda a sexta, das 09h00 ás 19h00</p>
                 </div>
                 <div class="footer-email">
                     <img src="imgs/e-mail-icon.png" alt="icone de e-mail" width="20" height="20">
@@ -65,8 +65,11 @@
                     
                 <div class="footer-sobre-texto">
                     <h2>Nossa História</h2>
-                    <p class="footer-historia-paragrafo">Mussum Ipsum, cacilds vidis litro abertis. Mé<br> faiz elementum girarzis, nisi eros vermeio. Nulla<br> id gravida magna, ut semper sapien. 
-                    Suco de<br> cevadiss, é um leite divinis, qui tem lupuliz,<br> matis, aguis e fermentis. Detraxit consequat et<br> quo num tendi nada.</p>
+                    <p class="footer-historia-paragrafo">Olá! Bem-vindo ao Desapego.me, o seu refúgio literário!<br> 
+                        Somos um brechó de livros apaixonado por histórias e desapego.<br> 
+                        qui, cada livro conta uma história única, esperando encontrar um novo lar.<br>
+                        Navegue pelas prateleiras virtuais e descubra tesouros literários a preços irresistíveis,<br>
+                        No Desapego.me, a magia da leitura ganha vida através do compartilhamento e da busca por novas aventuras.</p>
                 </div>
             </div>  
         </div>    
