--- a/site-me-desapego/produtos.html
+++ b/site-me-desapego/produtos.html
@@ -31,22 +31,26 @@
             <h1 class="titulo titulo-aba-produtos">Livros</h1>
             <div class="flex">
                 <div class="produto">
-                    <div class="produto-foto"></div>
-                    <!-- <img scr="./imgs/papo.png" alt="livro"> -->
+                    <div class="produto-foto">
+                        <img src="./imgs/capa-livro-starwars.jpg" class="miniatura" alt="livro">
+                    </div>
                     <strong>Star Wars : Herdeiro do Jedi</strong>
                     <p>R40,00<p>
                     <a href="star-wars.html" class="botao"><button>Adquira já</button></a>
                 </div>
                 <div class="produto">
-                    <div class="produto-foto"></div>
-                    <!-- <img scr="" alt="livro"> -->
+                    <div class="produto-foto">
+                        <img src="./imgs/mil-coisas-podem-acontecer.jpg" class="miniatura" alt="livro">
+                    </div>
                     <strong>Mil coisas podem acontecer</strong>
                     <p>R$24,00<p>
                     <a href="mil-coisas-podem-acontecer.html" class="botao"><button>Adquira já</button></a>
                 </div>
                 <div class="produto">
-                    <div class="produto-foto"></div>
-                    <!-- <img scr="" alt="livro"> -->
+                    <div class="produto-foto">
+                        
+                        <img src="./imgs/robo-selvagem-capa,.jpg" class="miniatura" alt="livro">
+                    </div>
                     <strong>Robo Selvagem</strong>
                     <p>R$24,00<p>
                     <a href="robo-selvagem.html" class="botao"><button>Adquira já</button></a>
@@ -55,28 +59,30 @@
         </div>
     </section>
 
-
     <section class="produtos-box produtos-box-aba-produtos">
         <div class="interface">
             <h1 class="titulo titulo-aba-produtos">Mangás</h1>
             <div class="flex">
                 <div class="produto">
-                    <div class="produto-foto"></div>
-                    <!-- <img scr="./imgs/papo.png" alt="livro"> -->
+                    <div class="produto-foto">
+                        <img src="./imgs/the-promised-neverland-capa.jpg" class="miniatura" alt="livro">
+                    </div>
                     <strong>The Promised Neverland Vol. 15</strong>
                     <p>R$22,00<p>
                     <a href="the-promised-neverland-vol-15.html" class="botao"><button>Adquira já</button></a>
                 </div>
                 <div class="produto">
-                    <div class="produto-foto"></div>
-                    <!-- <img scr="" alt="livro"> -->
+                    <div class="produto-foto">
+                        <img src="./imgs/eden-capa.jpg" class="miniatura" alt="livro">
+                    </div>
                     <strong>Eden - Its An Endless World! Vol. 2</strong>
                     <p>R$22,00<p>
                     <a href="eden-its-an-endless-world-vol-2.html" class="botao"><button>Adquira já</button></a>
                 </div>
                 <div class="produto">
-                    <div class="produto-foto"></div>
-                    <!-- <img scr="" alt="livro"> -->
+                    <div class="produto-foto">
+                        <img src="./imgs/9788583622703rezero12.jpg" class="miniatura" alt="livro">
+                    </div>
                     <strong>Re:Zero - Começando Uma Vida <br> Em Outro Mundo Vol. 12</strong>
                     <p>R$22,00<p>
                     <a href="re-zero-comecando-uma-nova-vida-em-outro-mundo-vol-12.html" class="botao"><button>Adquira já</button></a>
@@ -121,7 +127,7 @@
                 <h2>Fale conosco</h2>
                 <div class="footer-whatsapp">
                     <img src="imgs/whatsapp-icon.png" alt="icone do Whatsapp" width="20" height="20">
-                    <p>11 99999-9999 São Paulo<br> De segunda a sexta, das 08h ás 18h40<br> sábado das 09h às 17h20</p>
+                    <p>(11) 96761-6387 São Paulo<br> De segunda a sexta, das 09h00 ás 19h00</p>
                 </div>
                 <div class="footer-email">
                     <img src="imgs/e-mail-icon.png" alt="icone de e-mail" width="20" height="20">
@@ -136,10 +142,13 @@
                 <h2>Redes Sociais</h2>
                 <a href="https://www.instagram.com/me.desapego/"><img src="imgs/instagram-icon.png" alt="logo do Instagram" width="20" height="20"></a>
                     
-                <div class="footer-sobre-texto">
+               <div class="footer-sobre-texto">
                     <h2>Nossa História</h2>
-                    <p class="footer-historia-paragrafo">Mussum Ipsum, cacilds vidis litro abertis. Mé<br> faiz elementum girarzis, nisi eros vermeio. Nulla<br> id gravida magna, ut semper sapien. 
-                    Suco de<br> cevadiss, é um leite divinis, qui tem lupuliz,<br> matis, aguis e fermentis. Detraxit consequat et<br> quo num tendi nada.</p>
+                    <p class="footer-historia-paragrafo">Olá! Bem-vindo ao Desapego.me, o seu refúgio literário!<br> 
+                        Somos um brechó de livros apaixonado por histórias e desapego.<br> 
+                        qui, cada livro conta uma história única, esperando encontrar um novo lar.<br>
+                        Navegue pelas prateleiras virtuais e descubra tesouros literários a preços irresistíveis,<br>
+                        No Desapego.me, a magia da leitura ganha vida através do compartilhamento e da busca por novas aventuras.</p>
                 </div>
             </div>  
         </div>    
